# FoxyAdventure

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.code-workspace
Animated/: AltarBot.ase  AltarLeft.ase
headers/: background.hpp  basecharacter.hpp  character.hpp  enemy.hpp  game.hpp  gameaudio.hpp  gametextures.hpp  hud.hpp  npc.hpp  prop.hpp  proptextures.hpp  randomizer.hpp  sprite.hpp  treasure.hpp  window.hpp
sprites/enemies/: BrownBear.ase
sprites/npc/: SpeechBox.ase  npc.aseprite
sprites/props/: DungeonEntrance.aseprite
src/: background.cpp  basecharacter.cpp  character.cpp  enemy.cpp  game.cpp  gameaudio.cpp  gametextures.cpp  hud.cpp  main.cpp  npc.cpp  prop.cpp  randomizer.cpp  sprite.cpp  treasure.cpp
